--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,7 @@ a:hover {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-bottom: 40px;
 }
 
 .benefitTitle {
@@ -93,4 +94,39 @@ a:hover {
     font-family: 'Montserrat';
     font-size: 16px;
     padding: 0px 30px 0px 30px;
+}
+
+#mapsText, #map {
+    background-color: rgb(243, 243, 243);
+    padding: 40px 30px 0px 30px;
+}
+
+.map {
+    width: 50vw;
+    padding: 20px;
+}
+
+.mapsTitle {
+    color: #609b31;
+    font-family: 'Bitter';
+    font-weight: 700;
+    font-size: 28px;
+    padding: 20px;
+}
+
+.mapDescription {
+    text-align: justify;
+    color: #2c2c2c;
+    font-family: 'Montserrat';
+    font-size: 16px;
+    padding: 20px;
+}
+
+.bold {
+    font-weight: bold;
+    color: #609b31;
+}
+
+.italics {
+    font-style: italic;
 }
