--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,10 @@ a:hover {
     text-decoration: none;
 }
 
-.col-md-6 {
+.headerLogo {
+    display: flex;
+    align-items: center;
+    vertical-align: middle;
     padding: 0;
 }
 
@@ -48,10 +51,11 @@ a:hover {
     justify-content: center;
     flex-direction: column;
     background-image: url("../img/banner.jpg");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
-    min-height: 100vh;
     width: 100vw;
+    min-height: 60vh;
+    box-shadow: 8px 8px 14px #969696;
 }
 
 .title {
@@ -77,6 +81,7 @@ a:hover {
     justify-content: center;
     flex-direction: column;
     margin-bottom: 40px;
+    margin-top: 50px;
 }
 
 .benefitTitle {
