--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,8 @@
     flex-direction: row;
     justify-content: flex-end;
     list-style-type: none;
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 
 #logo {
@@ -111,12 +111,17 @@ a:hover {
     padding: 20px;
 }
 
-.mapsTitle {
+.mapsTitle, .carouselTitle {
     color: #609b31;
     font-family: 'Bitter';
     font-weight: 700;
     font-size: 28px;
+    text-transform: uppercase;
     padding: 20px;
+}
+
+.carouselTitle {
+    text-align: center;
 }
 
 .mapDescription {
@@ -134,4 +139,12 @@ a:hover {
 
 .italics {
     font-style: italic;
+}
+
+.carouselSubtitle {
+    text-align: center;
+    color: #858585;
+    font-family: 'Montserrat';
+    font-size: 16px;
+    margin-top: -10px;
 }
