--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ a:hover {
     justify-content: center;
     flex-direction: column;
     margin-bottom: 40px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .benefitTitle {
@@ -103,15 +103,16 @@ a:hover {
 
 #mapsText, #map {
     background-color: rgb(243, 243, 243);
-    padding: 40px 30px 0px 30px;
+    padding: 40px 30px 40px 30px;
 }
 
 .map {
     width: 50vw;
     padding: 20px;
+    
 }
 
-.mapsTitle, .carouselTitle {
+.mapsTitle, .carouselTitle, #iconsTitle {
     color: #609b31;
     font-family: 'Bitter';
     font-weight: 700;
@@ -122,6 +123,7 @@ a:hover {
 
 .carouselTitle {
     text-align: center;
+    margin-top: 20px;
 }
 
 .mapDescription {
@@ -147,4 +149,5 @@ a:hover {
     font-family: 'Montserrat';
     font-size: 16px;
     margin-top: -10px;
+    margin-bottom: 30px;
 }
