--- a/css/main.css
+++ b/css/main.css
@@ -107,19 +107,18 @@ a:hover {
     padding: 0px 30px 0px 30px;
 }
 
-#mapsText, #map {
+#mapsText, #map, #instructor, #instructorBio {
     background-color: rgb(243, 243, 243);
     padding: 40px 30px 40px 30px;
 }
 
-.map {
+.map, .photo {
     width: 50vw;
     padding: 20px;
-    
 }
 
-.mapsTitle, .carouselTitle, #iconsTitle, .bonusTitle {
-    color: #609b31;
+.mapsTitle, .carouselTitle, #iconsTitle, .bonusTitle, .instructorTitle {
+    color: #395e1b;
     font-family: 'Bitter';
     font-weight: 700;
     font-size: 28px;
@@ -140,7 +139,7 @@ a:hover {
     flex-direction: column;
 }
 
-.mapDescription {
+.mapDescription, .instructorDescription {
     text-align: justify;
     color: #2c2c2c;
     font-family: 'Montserrat';
@@ -188,4 +187,12 @@ a:hover {
 
 .benefitDescription {
     max-width: 30vw;
+}
+
+.footer {
+    text-align: center;
+    color: #2c2c2c;
+    font-family: 'Montserrat';
+    font-size: 14px;
+    box-shadow: -4px -4px 40px #d1d1d1;
 }
