--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,24 @@ a:hover {
     padding: 20px;
 }
 
+.carousel {
+    background-image: url("../img/banner1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+    min-height: 75vh;
+    display: flex;
+}
+
+.carousel-item {
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-caption {
+    padding: 0px;
+}
+
 .contactTitle {
     padding: 50px 60px 50px 60px;
     background-color: #f3f3f3;
@@ -234,14 +252,16 @@ a:hover {
     font-weight: 700;
     font-size: 32px;
     text-transform: uppercase;
-    margin-bottom: 30px;
+    padding-top: 40px;
+    margin: 0px;
 }
 
 .modulesText {
     color: #FFFFFF;
     font-family: 'Montserrat';
     font-weight: 400;
-    font-size: 18px;
+    font-size: 15px;
+    margin: 0px;
 }
 
 .photo {
