--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,14 @@ a:hover {
 #text-btn {
     margin-left: 20px;
 }
+
+#payment-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
 .video {
     /* background-color: #f3f3f3; */
     display: flex;
