--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* Editando o menu */
 .menu {
     display: flex;
@@ -11,7 +15,7 @@
     padding: 0;
 }
 
-#logo {
+#logoDescomplicaQGIS {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -66,7 +70,7 @@ a:hover {
     background-color: #395e1b;
 }
 
-#firstBanner {
+#bannerInicial {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -99,7 +103,7 @@ a:hover {
     padding-bottom: 30px;
 }
 
-#video {
+#youtubePlayer {
     display: block;
     margin: auto;
     width: 1200px;
@@ -109,7 +113,7 @@ a:hover {
 }
   
 @media(max-width: 1000px) {
-    #video {
+    #youtubePlayer {
         max-width: 90vw;
     }
 }
@@ -162,7 +166,7 @@ a:hover {
     padding: 0px 30px 0px 30px;
 }
 
-#mapsText, #map, #instructor, #instructorBio {
+#mapsText, #mapImage, .instrutor {
     padding: 40px 30px 40px 30px;
 }
 
@@ -171,7 +175,7 @@ a:hover {
     padding: 20px;
 }
 
-.mapsTitle, .carouselTitle, #iconsTitle, .bonusTitle, .instructorTitle, .faqTitle, .contactTitle, .exampleTitle, .priceTitle, .alunosTitle {
+.defaultTitle {
     color: #395e1b;
     font-family: 'Bitter';
     font-weight: 700;
@@ -180,7 +184,11 @@ a:hover {
     padding: 20px;
 }
 
-.exampleTitle, .priceTitle, .alunosTitle {
+.greenBackground {
+    background-color: #f3f3f3;
+}
+
+#iconsTitle, #estrutura, #bonus, #alunos, #valor, #faq {
     text-align: center;
 }
 
@@ -262,7 +270,7 @@ a:hover {
     padding: 0;
 }
 
-.instructorTitle, .instructorDescription {
+.tituloInstrutor, .descricaoInstrutor {
     padding-left: 25px;
 }
 
@@ -388,7 +396,7 @@ a:hover {
     margin: 5px;
 }
 
-#instructorBio {
+.instrutor {
     display: flex;
     flex-direction: row;
 }
@@ -425,5 +433,14 @@ a:hover {
     justify-content: center;
 }
 
-
-background-color: #f3f3f3;
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 60px;
+    text-align: center;
+    text-decoration: none;
+}
+  
+.fa:hover {
+    opacity: 0.6;
+}
