--- a/css/main.css
+++ b/css/main.css
@@ -32,11 +32,15 @@ a {
     color: #609b31;
     font-family: 'Bitter';
     font-weight: 700;
+    font-size: 15px;
+    transition: 0.5s;
 }
 
 a:hover {
     color: #395e1b;
     text-decoration: none;
+    font-size: 16px;
+    transition: 0.5s;
 }
 
 .headerLogo {
@@ -236,11 +240,12 @@ a:hover {
 
 .example {
     max-width: 400px;
+    transition: 0.4s;
 }
 
 .example:hover {
     transform: scale(1.15);
-    transition: transform .4s;
+    transition: 0.4s;
 }
 
 #carouselExampleControls {
@@ -348,11 +353,12 @@ a:hover {
     flex-direction: column;
     padding: 0px 80px 0px 80px;
     margin: 20px 0px 40px 0px;
+    transition-duration: 0.6s;
 }
 
 .bonuses:hover {
     background-color: #e8f8de;
-    transition-duration: 1s;
+    transition-duration: 0.6s;
     margin: 0px;
 }
 
