--- a/css/main.css
+++ b/css/main.css
@@ -443,7 +443,7 @@ a:hover {
 
 .footerText {
     text-align: center;
-    color: #2c2c2c;
+    color: #395e1b;
     font-family: 'Montserrat';
     font-size: 14px;
     padding-top: 30px;
@@ -463,5 +463,7 @@ footer {
 }
   
 .fa:hover {
-    opacity: 0.6;
+    color: #395e1b;
+    width: 42px;
+    font-size: 25px;
 }
