--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,19 @@ a:hover {
     margin-top: 80px;
 }
 
+.title {
+    color: #ffffff;
+    font-family: 'Bitter';
+    font-weight: 700;
+}
+
+.subtitle {
+    color: #9AD476;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 20px;
+}
+
 /* Editando a seção de vídeo */
 
 #video-btn {
@@ -122,27 +135,16 @@ a:hover {
     }
 }
 
-.title {
-    color: #ffffff;
-    font-family: 'Bitter';
-    font-weight: 700;
-}
-
-.subtitle {
-    color: #9AD476;
-    font-family: 'Montserrat';
-    font-weight: 400;
-    font-size: 20px;
+.description {
+    max-height: 100px;
+    margin: 0px 30px 0px 30px;
 }
 
 .icon {
     max-width: 40px;
 }
 
-.description {
-    max-height: 100px;
-    margin: 0px 30px 0px 30px;
-}
+/* Editando a seção de benefícios */
 
 .benefits {
     display: flex;
@@ -170,14 +172,7 @@ a:hover {
     padding: 0px 30px 0px 30px;
 }
 
-#mapsText, #mapImage, .instrutor {
-    padding: 40px 30px 40px 30px;
-}
-
-.map, .photo {
-    width: 50vw;
-    padding: 20px;
-}
+/* Editando títulos */
 
 .defaultTitle {
     color: #395e1b;
@@ -188,13 +183,18 @@ a:hover {
     padding: 20px;
 }
 
-.greenBackground {
-    background-color: #f3f3f3;
-}
+/* Alinhando títulos ao centro */
 
 #iconsTitle, #estrutura, #bonus, #alunos, #valor, #faq {
     text-align: center;
 }
+
+.carouselTitle, .bonusTitle, .faqTitle {
+    text-align: center;
+    margin-top: 20px;
+}
+
+/* Seção de pagamento */
 
 .priceDescription {
     color: #2c2c2c;
@@ -221,6 +221,16 @@ a:hover {
     align-items: center;
     justify-content: center;
 }
+
+#payment-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+/* Seção de alunos */
 
 .exampleCaption {
     text-align: center;
@@ -271,22 +281,44 @@ a:hover {
     padding: 0px;
 }
 
-.contactTitle {
-    padding: 50px 60px 50px 60px;
-    text-align: center;
-}
-
-.contact {
-    padding: 0;
-}
+/* Seção do Instrutor */
 
 .tituloInstrutor, .descricaoInstrutor {
     padding-left: 25px;
 }
 
-.carouselTitle, .bonusTitle, .faqTitle {
-    text-align: center;
-    margin-top: 20px;
+.instructorDescription {
+    text-align: justify;
+    color: #2c2c2c;
+    font-family: 'Montserrat';
+    font-size: 16px;
+    padding-left: 25px;
+}
+
+.instrutor {
+    display: flex;
+    flex-direction: row;
+}
+
+.bio {
+    display: flex;
+    flex-direction: column;
+}
+
+.photo {
+    max-width: 350px;
+    max-height: 350px;
+}
+
+/* Styling text */
+
+.bold {
+    font-weight: bold;
+    color: #609b31;
+}
+
+.italics {
+    font-style: italic;
 }
 
 .carousel-caption {
@@ -306,22 +338,6 @@ a:hover {
     margin: 0;
 }
 
-.instructorDescription {
-    text-align: justify;
-    color: #2c2c2c;
-    font-family: 'Montserrat';
-    font-size: 16px;
-    padding-left: 25px;
-}
-
-.bold {
-    font-weight: bold;
-    color: #609b31;
-}
-
-.italics {
-    font-style: italic;
-}
 
 .modulesTitle {
     color: #FFFFFF;
@@ -339,11 +355,6 @@ a:hover {
     font-weight: 400;
     font-size: 15px;
     margin: 0px;
-}
-
-.photo {
-    max-width: 350px;
-    max-height: 350px;
 }
 
 .bonuses {
@@ -369,6 +380,8 @@ a:hover {
 .benefitDescription {
     max-width: 30vw;
 }
+
+/* FAQ */
 
 .faqText {
     text-align: justify;
@@ -399,24 +412,6 @@ a:hover {
     margin: 5px;
 }
 
-.instrutor {
-    display: flex;
-    flex-direction: row;
-}
-
-.bio {
-    display: flex;
-    flex-direction: column;
-}
-
-#payment-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 40px;
-}
-
 .carousel-item {
     text-align: center;
 }
@@ -437,6 +432,8 @@ a:hover {
     justify-content: center;
 }
 
+/* Rodapé */
+
 .footer {
     box-shadow: -4px -4px 40px #d1d1d1;
 }
@@ -454,6 +451,8 @@ footer {
     text-align: center;
 }
 
+/* Redes sociais */
+
 .fa {
     padding: 10px 10px 25px 10px;
     font-size: 25px;
@@ -466,4 +465,17 @@ footer {
     color: #395e1b;
     width: 42px;
     font-size: 25px;
+}
+
+.introSection, .instrutor {
+    padding: 40px 30px 40px 30px;
+}
+
+.map, .photo {
+    width: 50vw;
+    padding: 20px;
+}
+
+.greenBackground {
+    background-color: #f3f3f3;
 }
